--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar-inverse">
     <br>
-    <%= link_to "Books And Movies", '/', :class => "title" %>
+    <%= link_to "Books And Movies", root_path, :class => "title" %>
 
       <% if current_user %>
           <a ui-sref="movies" class="current_user1">Movies</a>
