edited bookmark functionality

--- a/app/assets/templates/myMovies.html
+++ b/app/assets/templates/myMovies.html
@@ -1,4 +1,4 @@
- <h4><a href="#" ng-click="myMovies.getMyMovies()">Click Here To See Your Bookmarked Movies</a></h4>
+ <h4><a ng-click="myMovies.getMyMovies()">Click Here To See Your Bookmarked Movies</a></h4>
 
 <div class="movies">
   <p>{{currentUser}}</p>
