--- a/app/assets/templates/myBooks.html
+++ b/app/assets/templates/myBooks.html
@@ -1,4 +1,4 @@
- <h4><a href="#" ng-click="myBooks.getMyBooks()">Click Here To See Your Bookmarked Books</a></h4>
+ <h4><a ng-click="myBooks.getMyBooks()">Click Here To See Your Bookmarked Books</a></h4>
 
 <div class="books">
   <p>{{currentUser}}</p>
